0.4 (unreleased)
----------------

- Don't modify queries attribute when optimizing And or Or, return a new
  instance instead. This change is needed to open new optimization
  possibilities, like factorization.

- Fix Comparator __eq__ method to include type in comparison,
  previously NotAny('index', [1]) was equal to Any('index', [1]) for example.


0.3 (2014-06-12)
----------------

- Depend on the ``ZODB`` package rather than the ``ZODB3`` package.  The former
  is a newer ZODB packaging, implying ZODB4.  If you actually require ZODB v3,
  you will need to pin ``hypatia`` to an older release.  You should know that
  the most recent release of ``ZODB3`` at this time (3.11) actually implies
  ZODB v4 (I know it's not exactly obvious, but Jim ensures me it is), so if
  you really require ZODB v3, you'll need to pin ``ZODB3`` to below 3.11 and
  ``hypatia`` to below this release.

- Keyword indices now have a ``unique_values`` method like Field indexes.

- Calling ``hypatia.util.ResultSet.first()`` and
  ``hypatia.util.ResultSet.one()`` is now idempotent.  Calling it a second time
  will return the same value, and calling it will not effect the result set's
  iterability (it will start from zero).

0.2 (2014-05-16)
----------------

- Query objects are now consulted for intersect and union operations via
  methods, instead of the intersection/union logic being embedded in And and Or
  query objects.  This makes it possible to create query object types which
  intersect and/or union differently when combined with other query results.

0.1 (2014-02-09)
----------------

- Fix a typo in the Sphinx docs, which causes intersphinx references to
  fail.

0.1a7 (2013-10-08)
------------------

- Add a ``unique_values`` API to field index.

- Sometimes an ``index`` attribute could not be found to resolve a result 
  set when deeply nesting boolean operations (like And and Or).  See 
  https://github.com/Pylons/hypatia/pull/5
