@@ -4,6 +4,7 @@ where=hypatia
 nocapture=1
 cover-erase=1
 cover-package=hypatia
+cover-min-percentage=100
 
 [aliases]
 dev = develop easy_install hypatia[testing]
