@@ -1,45 +1,17 @@
 [tox]
 envlist = 
-    py26,py27,py32,py33,py34,cover
+    py27,py33,py34,cover
 
 [testenv]
 commands = 
-    python setup.py test -q
-deps =
-    persistent
-    BTrees
-    ZODB>=4.0.0b2
-    ZConfig
-    virtualenv
-    setuptools-git
-
-[testenv:py32]
-commands = 
-    python setup.py test -q
-
-[testenv:py33]
-commands = 
-    python setup.py test -q
-
-[testenv:py34]
-commands = 
-    python setup.py test -q
+    python setup.py -q test -q
 
 [testenv:cover]
 basepython =
-    python2.6
+    python2.7
 commands = 
+    pip install hypatia[testing]
     nosetests --with-xunit --with-xcoverage
-deps =
-    persistent
-    BTrees
-    ZODB>=4.0.0b2
-    ZConfig
-    virtualenv
-    setuptools-git
-    nose
-    coverage
-    nosexcover
 
 # we separate coverage into its own testenv because a) "last run wins" wrt
 # cobertura jenkins reporting and b) pypy and jython can't handle any
